--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "sass-loader": "^8.0.2"
+    "redux-form": "^8.3.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "sass-loader": "^8.0.2",
+    "yarn": "^1.22.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.13.1"
   }
 }
